--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,3 +1,6 @@
+cmake_minimum_required(VERSION 2.8.3)
+project(ros_essentials)
+
 find_package(catkin REQUIRED COMPONENTS
     roscpp
     rospy
@@ -5,3 +8,10 @@ find_package(catkin REQUIRED COMPONENTS
 
     message_generation
 )
+
+add_service_files(
+    FILES
+    AddTwoInts.srv
+)
+
+## catkin_make to create service
